@@ -5,7 +5,48 @@
 The internal data table structures in rqda file, which is a SQLite data base.
 }
 \details{
-  The source table contains the content of files.
+  The "attributes" table contains the definition of atrributes.
+%   \tabular{ll}{
+
+% }
+
+  The "coding" table contains information on codings.
+  \tabular{ll}{
+    cid :\tab \cr 
+    fid :\tab \cr 
+    seltext :\tab \cr 
+    selfirst :\tab \cr 
+    selend :\tab \cr 
+    status :\tab \cr 
+    owner :\tab \cr 
+    date :\tab \cr 
+    memo :\tab \cr 
+  }
+
+    The "filecat" table contains information on the file categorization.
+  \tabular{ll}{
+    name:\tab name of the file category.\cr
+    fid:\tab file id.\cr
+    catid:\tab if of file category.\cr
+    owner:\tab creator of file-category.\cr
+    date:\tab \cr
+    dateM:\tab \cr
+    memo:\tab \cr
+    status:\tab \cr
+  }
+
+  The "freecode" table contains information on the codes list.
+  \tabular{ll}{
+    name :\tab \cr 
+    memo :\tab \cr 
+    owner :\tab \cr 
+    date :\tab \cr 
+    dateM :\tab \cr 
+    id :\tab \cr 
+    status :\tab \cr
+  }
+  
+  The "source" table contains the content of files.
   \tabular{ll}{
     name:\tab name of the file.\cr
     id:\tab id of the file.\cr
@@ -16,13 +57,11 @@ The internal data table structures in rqda file, which is a SQLite data base.
     dataM:\tab not used now.\cr
     status:\tab 1 for standard status and 0 for temporarily deleted file.\cr
   }
-
-  The filecat table contains information on the file categorization.
-  \tabular{ll}{
-    name:\tab name of the file category.\cr
-    fid:\tab file id.\cr
+  
+  The "treecode" table contains information on the codes category.
+%   \tabular{ll}{
     
-  }
-
+%   }
+  
 }
 \author{ HUANG Ronggui }
